--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 
 image::doc/feder.png[]
 
-A lightweight GraphQL federation server.
+A lightweight https://www.apollographql.com/docs/federation/federation-spec[GraphQL Federation] server.
 
 == Build
 
