--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,8 @@
 = GraphQL Feder(ation) Server image:https://github.com/graphql-feder/feder/actions/workflows/maven.yml/badge.svg[link=https://github.com/graphql-feder/feder/actions/workflows/maven.yml]
 
+[sidebar]
+*Status: EXPERIMENTAL*
+
 image::doc/feder.png[]
 
 A lightweight https://www.apollographql.com/docs/federation/federation-spec[GraphQL Federation] server.
