--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = GraphQL Feder(ation) Server image:https://github.com/graphql-feder/feder/actions/workflows/maven.yml/badge.svg[link=https://github.com/graphql-feder/feder/actions/workflows/maven.yml]
 
 [sidebar]
-*Status: EXPERIMENTAL*
+[.big.text-center]*#Status: EXPERIMENTAL#*
 
 image::doc/feder.png[]
 
